kubernetes/celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  labels:
    app: celery-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
        - name: celery-worker
          image: nazar04u/web_completion-celery:latest
          command: ["celery", "-A", "WEB", "worker", "--loglevel=info", "--pool=gevent", "--concurrency=4"]
