kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-backend
  labels:
    app: django-backend
spec:
  replicas: 2  # дві репліки для балансування навантаження
  selector:
    matchLabels:
      app: django-backend
  template:
    metadata:
      labels:
        app: django-backend
    spec:
      containers:
        - name: django-backend
          image: nazar04u/web_completion-backend:latest 
          ports:
            - containerPort: 8008
---
apiVersion: v1
kind: Service
metadata:
  name: django-backend-service
spec:
  selector:
    app: django-backend
  ports:
    - protocol: TCP
      port: 8008
      targetPort: 8008
  type: LoadBalancer  # для балансування навантаження
