kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-completion-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    # Frontend rule for localhost testing
    - host: localhost 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service  
                port:
                  number: 3030  # Port the frontend service is exposing

    # Backend rule for localhost testing
    - host: localhost  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-backend-service  # The service name for your backend
                port:
                  number: 8008  # Port the backend service is exposing
